# dacon-jump-ai-2025

./: .gitignore  README.md  inference.py  main.py  pyproject.toml  requirements.txt  train.py
data/: 250724_split_noImputed.json  250727_split_noImputed_vlsize01.json  250802_split_noImputed_vlsize0_15.json  tr_vl_split_250717.json
experiments/hawon_exp/250722_first_exp/: 250724-162711.csv  250724-162842.csv  config.yaml  model.py
experiments/hawon_exp/250724_attentivefp/: 250724-201915.csv  config.yaml
experiments/hawon_exp/250724_schnet/: 250724-194944.csv  250724-195406.csv  250724-195750.csv  config.yaml  model.py
experiments/hawon_exp/250727_DimeNet/: config.yaml  model.py
experiments/hawon_exp/250727_attentivefp_vlsize01/: 250727-201757.csv  250727-201952.csv  config.yaml  model.py
experiments/hawon_exp/250802_CLR/: 250802-153433_0.3085.csv  250802-153552_0.2931.csv  250802-153933_0.7939_0.3469.csv  250802-154327_0.7883_0.3216.csv  250802-154941_0.8125_0.295.csv  250802-155654_0.7333_0.3485.csv  config.yaml
experiments/hawon_exp/250802_CLR_2/: 250802-161827_0.7421_0.3596.csv  config.yaml
experiments/hawon_exp/250802_CLR_3_noImp/: 250802-162651_0.5436_0.4367.csv  config.yaml  model.py
experiments/hawon_exp/250802_EGNN_vlsize0_15/: 250802-130136_0.2606.csv  config.yaml  model.py
experiments/hawon_exp/250802_각종그래프실험/: 250802-131437_0.2524.csv  250802-131620_0.2502.csv  250802-144122_0.2543.csv  250802-144341_0.2551.csv  250802-145109_0.2515.csv  250802-145939_0.2548.csv  (+5 more)
notebooks/: 250708_Dacon-baseline.ipynb  250709_EDA.ipynb  250709_preprocessing.ipynb  250714_data_cleaning_V2.ipynb  250715_ChemBERTa(MTR)_embedding.ipynb  250716_ChemBERTa(MTR)_embedding.ipynb  250716_input_preparation_hw.ipynb  250716_preprocess_hw.ipynb  250717_tr_vl_split.ipynb
src/: dataloader.py  evaluate.py  preprocess.py  utils.py
submits/: 250709_baseline_submit.csv
