[project]
name = "dacon-jump-ai-2025"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "datetime>=5.5",
    "iprogress>=0.4",
    "ipykernel>=6.29.5",
    "matplotlib>=3.10.3",
    "numpy==1.26.4",
    "pandas==2.1.4",
    "rdkit==2025.3.2",
    "scikit-learn>=1.7.0",
    "transformers>=4.53.2",
]
